tests/ui/impl-trait/where-allowed.stderr
error[E0562]: `impl Trait` is not allowed in `fn` pointer parameters
  --> $DIR/where-allowed.rs:22:40
   |
LL | fn in_fn_parameter_in_parameters(_: fn(impl Debug)) {
   |                                        ^^^^^^^^^^
   |
   = note: `impl Trait` is only allowed in arguments and return types of functions and methods

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0562`.
